# VLRProxy

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ae.yml  ng.yml  se.yml
CMake/: common.cmake  headerlist.cmake  sourcelist.cmake
CMake/ports/clib-util/: portfile.cmake  vcpkg.json
CMake/ports/commonlibsse/: portfile.cmake  vcpkg.json
include/: API_VLRProxy.h  Config.h  DOMManager.h  Forms.h  Hook.h  Hooking.h  MMSF_API.h  ModAPI.h  PCH.h  Papyrus.h  RaceManager.h
src/: Config.cpp  DOMManager.cpp  Hook.cpp  Main.cpp  ModAPI.cpp  Prox.cpp  RaceManager.cpp
