cmake_minimum_required(VERSION 3.31)
set(NAME "VLRProxy" CACHE STRING "")
set(VERSION 1.0.0 CACHE STRING "")
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# ---- Cache build vars ----

macro(set_from_environment VARIABLE)
  if (NOT DEFINED ${VARIABLE} AND DEFINED ENV{${VARIABLE}})
    set(${VARIABLE} $ENV{${VARIABLE}})
  endif ()
endmacro()

set_from_environment(VCPKG_ROOT)

if (DEFINED VCPKG_ROOT)
  set(CMAKE_TOOLCHAIN_FILE "${VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake" CACHE STRING "")
else ()
  message(
  WARNING
  "Variable VCPKG_ROOT is not set. Continuing without vcpkg."
 )
endif ()

# ---- Project ----

project(
 ${NAME}
 VERSION ${VERSION}
 LANGUAGES CXX
)

# ---- Include guards ----

if(PROJECT_SOURCE_DIR STREQUAL PROJECT_BINARY_DIR)
  message(
  FATAL_ERROR
   "In-source builds not allowed. Please make a new directory (called a build directory) and run CMake from there."
 )
endif()

set(CMAKE_INTERPROCEDURAL_OPTIMIZATION ON)
set(CMAKE_INTERPROCEDURAL_OPTIMIZATION_DEBUG OFF)

# ---- Add source files ----

set(BUILD_TESTS OFF CACHE BOOL "Disable Tests" FORCE)
set(ENABLE_SKYRIM_VR OFF CACHE BOOL "Disable VR" FORCE)
set(ENABLE_SKYRIM_SE OFF CACHE BOOL "Disable SE" FORCE)
add_subdirectory(extern/CommonLibSSE)
include(CMake/headerlist.cmake)
include(CMake/sourcelist.cmake)

source_group(
 TREE
  ${CMAKE_CURRENT_SOURCE_DIR}
 FILES
  ${headers}
  ${sources}
)

source_group(
 TREE
  ${CMAKE_CURRENT_BINARY_DIR}
)

# ---- Create DLL ----

add_library(
 ${PROJECT_NAME}
 SHARED
 ${headers}
 ${sources}
)

target_compile_features(
 ${PROJECT_NAME}
 PUBLIC
  cxx_std_23
)

set_target_properties(
  ${PROJECT_NAME}
  PROPERTIES
   CXX_STANDARD 23
   CXX_STANDARD_REQUIRED ON
   INTERPROCEDURAL_OPTIMIZATION ON
   INTERPROCEDURAL_OPTIMIZATION_DEBUG OFF
 )

target_include_directories(
 ${PROJECT_NAME}
 PRIVATE
  ${CMAKE_CURRENT_BINARY_DIR}/include
  ${CMAKE_CURRENT_SOURCE_DIR}/include
)

#find_package(reflectcpp CONFIG REQUIRED)

target_link_libraries(
 ${PROJECT_NAME}
 PRIVATE
  CommonLibSSE::CommonLibSSE
  #reflectcpp::reflectcpp
)

target_precompile_headers(
 ${PROJECT_NAME}
 PRIVATE
  include/PCH.h
)

if (MSVC)
  target_compile_options(
  ${PROJECT_NAME}
  PRIVATE
   /sdl             # Enable Additional Security Checks
   /utf-8           # Set Source and Executable character sets to UTF-8
   /Zi              # Debug Information Format
   /MD
   /permissive-     # Standards conformance
   /Zc:preprocessor # Enable preprocessor conformance mode

   /wd4200          # nonstandard extension used : zero-sized array in struct/union

   "$<$<CONFIG:DEBUG>:>"
   "$<$<CONFIG:RELEASE>:/Zc:inline;/JMC-;/Ob3>"
 )

  target_link_options(
  ${PROJECT_NAME}
  PRIVATE
   "$<$<CONFIG:DEBUG>:/INCREMENTAL;/OPT:NOREF;/OPT:NOICF>"
   "$<$<CONFIG:RELEASE>:/INCREMENTAL:NO;/OPT:REF;/OPT:ICF;/DEBUG:FULL>"
 )
endif ()
